--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
+  <meta name="google-site-verification" content="AeJ1Gh6Omp3Eg16U60vase36dnGyogBc19_6FZ5MgAg" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Off-Page SEO Nedir?</title>
@@ -75,7 +76,7 @@
   </header>
 
   <section>
-    <p>Off-Page SEO (sayfa dışı SEO), bir web sitesinin kendi dışındaki kaynaklar aracılığıyla arama motorlarında otorite ve güvenilirlik kazanmasını sağlayan stratejileri kapsar. Bu çalışmalar doğrudan web sitesinin dışında gerçekleşir ve arama motorları tarafından sitenin popülerliğini, güvenilirliğini ve otoritesini ölçmek için kullanılır.</p>
+     <strong><a href="https://www.seouptr.com" target="_blank">Off Page SEO Nedir</a></strong> bir web sitesinin kendi dışındaki kaynaklar aracılığıyla arama motorlarında otorite ve güvenilirlik kazanmasını sağlayan stratejileri kapsar. Bu çalışmalar doğrudan web sitesinin dışında gerçekleşir ve arama motorları tarafından sitenin popülerliğini, güvenilirliğini ve otoritesini ölçmek için kullanılır.</p>
 
     <div class="info-block">
       <p><i class="fa-solid fa-link"></i><strong>1. Backlink (Geri Bağlantı) Stratejileri:</strong> Diğer web sitelerinden alınan bağlantılar, arama motorları tarafından bir güven oyu olarak değerlendirilir. Kaliteli ve alakalı sitelerden gelen backlinkler sıralamalara olumlu etki eder.</p>
