--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
 <p>Merhaba, bu yazımızda
-    <a href="https://www.seouptr.com/?utm_source=Off%20Page%Seo%20Nedir&utm_campaign=otomatik" id="autoLink">
+    <a href="https://www.seouptr.com/?utm_source=Off%20Page%20Seo%20Nedir&utm_campaign=otomatik" id="autoLink">
       Off Page SEO Nedir
     </a> konusunu ele alacağız.
     Ziyaret edeceğiniz site: <strong>www.seouptr.com</strong>
